# file-relay

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  pbench-relay-server.service  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/workflows/: ci.yml  container_build.yml
relay/: __init__.py  relay.py
relay/tests/: test_relay.py
src/relay/: relay.py
tests/: requirements.txt  test_relay.py
