[metadata]
name = file-relay
summary = A simple HTTP-based ad-hoc file relay utility with a RESTful interface
description_file = README.md
author = Pbench by Red Hat
maintainer = Pbench by Red Hat
home_page = https://github.com/distributed-system-analysis/file-relay
classifier =
   Programming Language :: Python :: 3.9,
   License :: OSI Approved :: GNU General Public License v3 (GPLv3),
   Operating System :: OS Independent,

[options]
python_requires = >= 3.9
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[entry_points]
console_scripts =
   relay = relay.relay:main

[tools:pytest]
testpaths = tests
